Исправления документации
