# app/Http/Actions/Api/Sections/Create/Request.php
@@ -36,6 +36,7 @@ use OpenApi\Annotations as OA;
  *                 @OA\Schema(ref="#components/schemas/TypeFile"),
  *                 @OA\Schema(ref="#components/schemas/TypeList"),
  *                 @OA\Schema(ref="#components/schemas/TypeSelect"),
+ *                 @OA\Schema(ref="#components/schemas/TypeDate"),
  *          }),
  *       )
  *    )
