# app/Http/Actions/Api/Sections/Update/Request.php
@@ -35,6 +35,7 @@ use Illuminate\Http\Request as BaseRequest;
  *                 @OA\Schema(ref="#components/schemas/TypeFile"),
  *                 @OA\Schema(ref="#components/schemas/TypeList"),
  *                 @OA\Schema(ref="#components/schemas/TypeSelect"),
+ *                 @OA\Schema(ref="#components/schemas/TypeDate"),
  *          }),
  *       )
  *    )
